--- a/index.html
+++ b/index.html
@@ -3,20 +3,25 @@
 <head>
     <meta charset="utf-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1"/> 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" href="style.css"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> 
     <title>An example webpage</title> 
 </head>
 <body>     
-    <h1>My simple web page</h1>
-    <div class="progress">       <div class="progress-bar bg-success" role="progressbar" style="width: 40%"></div>       <div class="progress-bar bg-warning" role="progressbar" style="width: 10%"></div>       <div class="progress-bar bg-danger" role="progressbar" style="width: 20%"></div>       <div class="progress-bar bg-primary" role="progressbar" style="width: 30%"></div>        </div>     
-     <p>      
-         This is a paragraph     
-        </p>     
-        <p>       T
-            his is another paragraph.     </p>    
+    <h1>Cloud</h1>
+    <div class="progress">      
+         <div class="progress-bar bg-warning" role="progressbar" style="width: 35%">
+        </div>       
+        <div class="progress-bar bg-purple" role="progressbar" style="width: 5%">
+        </div>       
+        <div class="progress-bar bg-purple" role="progressbar" style="width: 5%">
+        </div>       
+        <div class="progress-bar bg-primary" role="progressbar" style="width: 5%">
+        </div>        
+    </div>     
+       
              <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-
+            
              </script>   
     </body> 
 </html> 
