--- a/index2.html
+++ b/index2.html
@@ -24,7 +24,7 @@
             <div class="col border col-3">
                 Menu
             </div>
-            <div class="=col border col-6">
+            <div class="h-30 col border col-9 ">
                 content
             </div>
             <div class="col border col-12">
