--- a/index2.html
+++ b/index2.html
@@ -24,12 +24,18 @@
             <div class="col border col-3">
                 Menu
             </div>
-            <div class="h-30 col border col-9 ">
+            <div class=" col border col-9 ">
                 content
             </div>
             <div class="col border col-12">
                 Footer
             </div>
+        </div>
+        <div class="sad border">
+            <div class="row border">
+                <div class="col border col-3">
+                    test
+                </div>
         </div>
       </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
