--- a/indexmk2.html
+++ b/indexmk2.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css" />
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="container">
         <div class="row align-item-center">
             <div class="col-3"><img src="logo.svg" class="float-left" width="100rem" alt="logo">
@@ -18,49 +21,87 @@
                         <input class="form-control form-control-borderless" type="search" placeholder="Search">
                     </div>
                     <div class="col-2 p-0">
-                        <button class ="btn btn-secondary" type="submit">Search</button>
+                        <button class="btn btn-secondary" type="submit">Search</button>
                     </div>
                 </div>
             </div>
         </div>
         <div class="row my-2">
-            <div class="col"> <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                  <a class="navbar-brand" href="#">Dogs</a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Cats</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Dog foods</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Cat foods</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link disabled">About us</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </nav></div>
+            <div class="col">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <div class="container-fluid">
+                        <a class="navbar-brand" href="#">Dogs</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="#">Cats</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Dog foods</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Cat foods</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link disabled">About us</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </div>
         </div>
         <div class="row my-4">
-            <div class="col"><nav style="--bs-breadcrumb-divider: '/';" aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="#">Home</a></li>
-                  <li class="breadcrumb-item active" aria-current="page">Dogs (101 items)</li>
-                </ol>
-              </nav></div>
+            <div class="col">
+                <nav style="--bs-breadcrumb-divider: '/';" aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="#">Home</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">Dogs (101 items)</li>
+                    </ol>
+                    <div class="row">
+                        <div class="col">
+                            <h5>Dogs</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-3">
+                            <div class="card">
+                                <div class="card-header bg-transparent border-0 text-secondary"> Breeds
+                                </div>
+                                <ul class="list-group">
+                                    <li class="list-group-item  border-0" ">Terriers</li>
+                                    <li class="list-group-item  border-0" ">Sportings</li>
+                                    <li class="list-group-item  border-0"">Hounds</li>
+                                    <li class="list-group-item  border-0"">Non-sportings</li>
+                                    <li class="list-group-item  border-0"">Working</li>
+                                    <li class="list-group-item  border-0"">Herding</li>
+                                    <li class="list-group-item  border-0"">Toy</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-9">
+                            <h2><div class="card" style="width: 18rem;">
+                                <img src="..." class="card-img-top" alt="...">
+                                <div class="card-body">
+                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                </div>
+                              </div></h2>
+                        </div>
+                    </div>
+                </nav>
+            </div>
         </div>
     </div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-    </script>   
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+        </script>
+</body>
+
 </html>
