--- a/indexmk2.html
+++ b/indexmk2.html
@@ -85,12 +85,32 @@
                             </div>
                         </div>
                         <div class="col-9">
-                            <h2><div class="card" style="width: 18rem;">
-                                <img src="..." class="card-img-top" alt="...">
-                                <div class="card-body">
-                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <div class="card-group">
+                                <div class="card">
+                                  <img src="..." class="card-img-top" alt="...">
+                                  <div class="card-body pd-0">
+                                    <h5 class="card-title">Dog Name</h5>
+                                    <p class="card-text">Seller</p>
+                                    <p class="card-text"><small class="text-muted mb-0">THB xxx.xx</small></p>
+                                  </div>
                                 </div>
-                              </div></h2>
+                                <div class="card">
+                                  <img src="..." class="card-img-top" alt="...">
+                                  <div class="card-body pd-0">
+                                    <h5 class="card-title">Dog Name</h5>
+                                    <p class="card-text">Seller</p>
+                                    <p class="card-text"><small class="text-muted mb-0">THB xxx.xx</small></p>
+                                  </div>
+                                </div>
+                                <div class="card">
+                                  <img src="..." class="card-img-top" alt="...">
+                                  <div class="card-body pd-0">
+                                    <h5 class="card-title">Dog Name</h5>
+                                    <p class="card-text">Seller</p>
+                                    <p class="card-text"><small class="text-muted mb-0">THB xxx.xx</small></p>
+                                  </div>
+                                </div>
+                              </div>  
                         </div>
                     </div>
                 </nav>
