--- a/index.html
+++ b/index.html
@@ -1,27 +1,51 @@
 <!DOCTYPE html>
-<html lang=“en"> 
+<html>
+
 <head>
-    <meta charset="utf-8"> 
-    <meta name="viewport" content="width=device-width, initial-scale=1"/> 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" href="style.css"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> 
-    <title>An example webpage</title> 
+    <title>An example webpage</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="Style0.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css%22%3E
 </head>
-<body>     
-    <h1>Cloud</h1>
-    <div class="progress">      
-         <div class="progress-bar bg-warning" role="progressbar" style="width: 35%">
-        </div>       
-        <div class="progress-bar bg-purple" role="progressbar" style="width: 5%">
-        </div>       
-        <div class="progress-bar bg-purple" role="progressbar" style="width: 5%">
-        </div>       
-        <div class="progress-bar bg-primary" role="progressbar" style="width: 5%">
-        </div>        
-    </div>     
-       
-             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-            
-             </script>   
-    </body> 
-</html> 
+
+<body>
+    <div class="main">
+        <div class="header">
+            <div class="fw-bold h6">iCloud</div>
+            <diV class="used">108.1 GB of 200 GB Used</diV>
+        </div>
+
+        <div class="progress">
+            <div class="progress-bar bg-warning" role=" progressbar" style="width: 27%"></div>
+            <div class="progress-bar bg-danger" role="progressbar" style="width: 8%"></div>
+            <div class="progress-bar bg-purple" role="progressbar" style="width: 8%"></div>
+            <div class="progress-bar bg-primary" role="progressbar" style="width: 8%"></div>
+        </div>
+
+        <div class="footer">
+            <div>
+                <i class="bi bi-stop-fill text-warning"></i>Photo
+            </div>
+            <div>
+                <i class="bi bi-stop-fill text-danger"></i>Docs
+            </div>
+            <div>
+                <i class="bi bi-stop-fill tx-purple"></i>Backups
+            </div>
+            <div>
+                <i class="bi bi-stop-fill text-primary"></i>Others
+            </div>
+        </div>
+    </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+</body>
+
+</html>
+
