--- a/indexmk4.html
+++ b/indexmk4.html
@@ -21,7 +21,7 @@
                         <input class="form-control form-control-borderless" type="search" placeholder="Search">
                     </div>
                     <div class="col-2 p-0">
-                        <button class="btn btn-secondary" type="submit">Search</button>
+                        <button class="btn btn-warning" type="submit">Search</button>
                     </div>
                 </div>
             </div>
