--- a/indexmk2.html
+++ b/indexmk2.html
@@ -13,9 +13,9 @@
 <body>
     <div class="container">
         <div class="row align-item-center">
-            <div class="col-3"><img src="logo.svg" class="float-left" width="100rem" alt="logo">
+            <div class="col-xl-3 col-12"><img src="logo.svg" class="logo"  width="100rem" alt="logo">
             </div>
-            <div class="col-9">
+            <div class="col-xl-9 col-12">
                 <div class="row">
                     <div class="col-5 p-0">
                         <input class="form-control form-control-borderless" type="search" placeholder="Search">
@@ -69,7 +69,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-xl-3 col-lg-4 col-12">
                             <div class="card">
                                 <div class="card-header bg-transparent border-0 text-secondary"> Breeds
                                 </div>
@@ -84,7 +84,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-9">
+                        <div class="col-xl-9 col-lg-8 col-12">
                             <div class="card-group">
                                 <div class="card">
                                   <img
